# zabbix-mcp-server

./: .gitignore  CONTRIBUTING.md  Dockerfile  MCP_SETUP.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: .env.example  mcp.json
scripts/: start_server.py  test_server.py
src/: __init__.py  zabbix_mcp_server.py
